tests/negative/test_custom_not_cn.orb
eval (sym (t::custom i32));

fnc main () () {};